--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-    "name": "bluestack-project",
-    "version": "1.0.0",
-    "description": "Bluestack project",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/Ashish007/bluestack-project.git"
-    },
-    "author": "Ashish Jain",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/Ashish007/bluestack-project/issues"
-    },
-    "homepage": "https://github.com/Ashish007/bluestack-project#readme"
+  "name": "bluestack-project",
+  "version": "1.0.0",
+  "description": "Bluestack project",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development --open",    
+    "build": "webpack --mode production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ashish007/bluestack-project.git"
+  },
+  "author": "Ashish Jain",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ashish007/bluestack-project/issues"
+  },
+  "homepage": "https://github.com/Ashish007/bluestack-project#readme",
+  "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
-  
+}
